--- a/example.env
+++ b/example.env
@@ -1,7 +1,9 @@
+# filepath: /var/www/poe-market-tracker/.env
 # Database configuration
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=your_username
+# If your DB_PASSWORD, wrap it in double quotation
 DB_PASSWORD=your_password
 DB_NAME=poe_market_tracker
 
