moved global variable to .env file.

--- a/example.env
+++ b/example.env
@@ -12,3 +12,6 @@ PORT=3000
 
 # Path of Exile API configuration
 POE_API_URL=https://api.pathofexile.com
+
+# Delay in milliseconds between each API call
+APICallDelay=10000
